# youbot_driver_rev2

./: CMakeLists.txt  README.md  Required_Packages
cmake-modules/: FindSoem.cmake  UseDoxygen.cmake
config/: youbot-ethercat.cfg  youbot-manipulator.cfg
include/: DataTrace.hpp  EthercatMasterInterface.hpp  EthercatMasterWithThread.hpp  EthercatMasterWithoutThread.hpp  GripperDataTrace.hpp  JointLimitMonitor.hpp  JointTrajectoryController.hpp  YouBotBase.hpp  YouBotGripper.hpp  YouBotGripperBar.hpp  YouBotGripperParameter.hpp  YouBotJoint.hpp  YouBotJointParameter.hpp  YouBotJointParameterReadOnly.hpp  YouBotManipulator.hpp
src/: DataTrace.cpp  EthercatMasterWithThread.cpp  GripperDataTrace.cpp  JointLimitMonitor.cpp  YouBotGripper.cpp  YouBotGripperBar.cpp  YouBotJoint.cpp
src/soem/: CMakeLists.txt
tools/: CMakeLists.txt
tools/android_app_pc_client/: CMakeLists.txt  Required_Packages
tools/android_app_pc_client/cmake-modules/: FindBluetooth.cmake
tools/dataTraceExample/: CMakeLists.txt  README  manifest.xml
tools/dataTraceExample/src/: main.cpp
tools/diagnostics_tool/: Required_Packages
tools/diagnostics_tool/src/: YouBotDiagnostics.cpp  YouBotDiagnostics.h
tools/displayIP/: CMakeLists.txt
tools/hello_world_demo/: CMakeLists.txt
tools/joint_configurator/: CMakeLists.txt  Required_Packages
tools/joint_configurator/config/: arm-2-protected.cfg  arm-2.cfg  arm-3-protected.cfg  arm-4-protected.cfg  arm-5-protected.cfg  base-protected.cfg  base.cfg
tools/joint_configurator/src/: JointConfigurator.cpp
tools/joint_configurator_test/: CMakeLists.txt
tools/joint_configurator_test/src/: readPID.cpp
tools/joypad_control/: CMakeLists.txt  Required_Packages
tools/keyboard_remote_control/: CMakeLists.txt  Required_Packages
tools/simple_base_position_control/: CMakeLists.txt
tools/simple_base_position_control/src/: main.cpp
tools/simple_joint_position_control/: CMakeLists.txt
tools/simple_joint_position_control/config/: gnuplotconfig
tools/simple_joint_position_control/src/: examples.cpp  main.cpp
tools/testing/: CMakeLists.txt  Required_Packages
tools/testing/cmake-modules/: FindCppUnit.cmake  FindYoubotDriver.cmake
tools/testing/include/: YouBotArmTest.hpp  YouBotArmTestWithoutThread.hpp  YouBotBaseKinematicsTest.hpp  YouBotBaseTest.hpp  YouBotBaseTestWithoutThread.hpp  YouBotGripperTest.hpp
tools/testing/src/: YouBotArmTest.cpp  YouBotArmTestWithoutThread.cpp  YouBotBaseKinematicsTest.cpp  YouBotBaseTest.cpp  YouBotBaseTestWithoutThread.cpp  YouBotGripperTest.cpp
tools/uncorrected/joint_configurator/src/: JointConfigurator.cpp
tools/uncorrected/joint_configurator_test/src/: JointConfigurator.cpp  setPID.cpp
